src/scss/blocks/_featured-services.scss
.featured-services {
    &__item {
      display: block;
      position: relative;

      img {
        width: 100%;
        height: 15rem;
        object-fit: cover;
        z-index: 0;
        filter: grayscale(100%) brightness(0.8);
      }
      p {
        position: absolute;
        bottom: get-size('600');
        left: get-size('600');
        padding-right: get-size('600');
      }
    }

    &__action {
      text-align: center;
    }

    @include media-query('md') {
      &__inner {
        display: grid;
        grid-template-columns: repeat(12, 1fr);
        grid-gap: get-size('700') get-size('500');

        @supports (display: grid) {
          > * {
            margin: 0;
          }
        }
      }

      &__intro {
        grid-column: 1/13;
        align-self: end;
      }

      &__item {
        max-height: 17rem;
        &:nth-child(odd) {
          grid-column: 1/8;
        }

        &:nth-child(even) {
          grid-column: 13/6;
        }
      }
    }

    @include media-query('lg') {
      grid-template-columns: repeat(2, 1fr);

      &__intro,
      &__item {
        max-height: 17rem;
        &:nth-child(odd) {
          grid-column: 1/7;
        }

        &:nth-child(even) {
          grid-column: 13/7;
        }
      }
    }
  }

